# Changelog

## 1.1.0 - 2019-03
### New for users
- Hook scripts
    {{config_path}}/autosr/hooks
    Each event directory under hooks contains executables that will run when that event occurs.
    For example, having an executable "notify.py" in the "end-save" directory will run notify.py every time autosr completes a save.
- Changes for showroom module
    The display name of a target updates when the user changes their title

## v3 - 2020-07
- Bug fixes

## v4 - 2021-01
- Bug fixes

## v5 - 2021-02
- Modify behavior for 'end-save' hook. It now gives only one save path instead of a list of paths.
- Fixed bug with offline handling. We will now attempt to fetch targets when internet access is restored.