@@ -18,3 +18,7 @@
 ## v5 - 2021-02
 - Modify behavior for 'end-save' hook. It now gives only one save path instead of a list of paths.
 - Fixed bug with offline handling. We will now attempt to fetch targets when internet access is restored.
+
+
+## v7
+- Quick fix for the new SHOWROOM design. More work may be needed.
